@@ -263,25 +263,25 @@ struct machine_ops mb_mops[] = {
 
   {  /* MacBookPro3,1 (15" & 17", Core2 Duo, June 2007) */
     .type = MACHINE_MACBOOKPRO_3,
-    .lcd_backlight_probe = nv8600mgt_backlight_probe,
-    .lcd_backlight_step = nv8600mgt_backlight_step,
-    .lcd_backlight_toggle = nv8600mgt_backlight_toggle,
+    .lcd_backlight_probe = mbp_sysfs_backlight_probe,
+    .lcd_backlight_step = sysfs_backlight_step,
+    .lcd_backlight_toggle = sysfs_backlight_toggle,
     /* .evdev_identify = evdev_is_geyser4, */
   },
 
   {  /* MacBookPro4,1 (15" & 17", Core2 Duo, February 2008) */
     .type = MACHINE_MACBOOKPRO_4,
-    .lcd_backlight_probe = nv8600mgt_backlight_probe,
-    .lcd_backlight_step = nv8600mgt_backlight_step,
-    .lcd_backlight_toggle = nv8600mgt_backlight_toggle,
+    .lcd_backlight_probe = mbp_sysfs_backlight_probe,
+    .lcd_backlight_step = sysfs_backlight_step,
+    .lcd_backlight_toggle = sysfs_backlight_toggle,
     /* .evdev_identify = evdev_is_wellspring2, */
   },
 
   {  /* MacBookPro5,1 (15" & 17", Core2 Duo, October 2008) */
     .type = MACHINE_MACBOOKPRO_5,
-    .lcd_backlight_probe = nv8600mgt_backlight_probe,
-    .lcd_backlight_step = nv8600mgt_backlight_step,
-    .lcd_backlight_toggle = nv8600mgt_backlight_toggle,
+    .lcd_backlight_probe = mbp_sysfs_backlight_probe,
+    .lcd_backlight_step = sysfs_backlight_step,
+    .lcd_backlight_toggle = sysfs_backlight_toggle,
     /* .evdev_identify = evdev_is_wellspring3, */
   },
 
@@ -321,9 +321,9 @@ struct machine_ops mb_mops[] = {
 
   {  /* MacBook5,1 (Core2 Duo, October 2008) */
     .type = MACHINE_MACBOOK_5,
-    .lcd_backlight_probe = nv8600mgt_backlight_probe,
-    .lcd_backlight_step = nv8600mgt_backlight_step,
-    .lcd_backlight_toggle = nv8600mgt_backlight_toggle,
+    .lcd_backlight_probe = mbp_sysfs_backlight_probe,
+    .lcd_backlight_step = sysfs_backlight_step,
+    .lcd_backlight_toggle = sysfs_backlight_toggle,
     /* .evdev_identify = evdev_is_wellspring3, */
   },
 
@@ -339,9 +339,9 @@ struct machine_ops mb_mops[] = {
 
   {  /* MacBookAir2,1 (October 2008) */
     .type = MACHINE_MACBOOKAIR_2,
-    .lcd_backlight_probe = nv8600mgt_backlight_probe,
-    .lcd_backlight_step = nv8600mgt_backlight_step,
-    .lcd_backlight_toggle = nv8600mgt_backlight_toggle,
+    .lcd_backlight_probe = mbp_sysfs_backlight_probe,
+    .lcd_backlight_step = sysfs_backlight_step,
+    .lcd_backlight_toggle = sysfs_backlight_toggle,
     /* .evdev_identify = evdev_is_wellspring3, */
   }
 };
